
For the latest information visit project web site:
https://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.2.M3
Date:
----------------------------------
Changes/New Features:

CAY-2689 ServerRuntime API: missing some variants of the performInTransaction() method

Bug Fixes:

CAY-2683 Don't use DISTINCT for joins on to-one related tables
CAY-2685 JsonType should use the actual JDBC type, not OTHER
CAY-2686 SQL translator incorrectly quotes fully qualified tables' names
CAY-2690 dbimport skips length changes for BINARY and VARBINARY columns
CAY-2691 MySQL driver 8.0.x stores LocalDateTime differently than 5.1.x

----------------------------------
Release: 4.2.M2
Date: October 6, 2020
----------------------------------
Changes/New Features:

CAY-2338 Support comments in cgen and default templates
CAY-2656 Modeler: option to download required jars directly from maven central
CAY-2657 SelectQueryDescriptor should use ObjectSelect
CAY-2659 Use new SQLBuilder utility to generate SQL for batch queries
CAY-2662 Use custom interface for SQL tree processor instead of a Function<Node, Node>
CAY-2663 Support for custom SQL operators
CAY-2664 Add methods to EntityProperty to allow direct usage of primary key values
CAY-2665 Support for widespread SQL types that falls into Jdbc type OTHER
CAY-2668 Experimental graph-based db operations sorter
CAY-2670 CommitLog does not include FKs for deleted objects with one-way relationships
CAY-2673 Support ordering by aggregate functions
CAY-2674 Support in-memory evaluation of aggregate functions

Bug Fixes:

CAY-2591 Modeler: project becomes dirty after click on dbImport or cgen tab
CAY-2671 QualifierTranslator fails to translate expressions with compound PKs/FKs
CAY-2675 A one-to-one relationship with meaningful PK can be nullified in the nested context