@@ -75,7 +75,47 @@ name|java
 operator|.
 name|util
 operator|.
-name|*
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|EnumMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
 import|;
 end_import
 
@@ -131,7 +171,105 @@ name|cayenne
 operator|.
 name|annotation
 operator|.
-name|*
+name|PostAdd
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|annotation
+operator|.
+name|PostLoad
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|annotation
+operator|.
+name|PostPersist
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|annotation
+operator|.
+name|PostRemove
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|annotation
+operator|.
+name|PostUpdate
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|annotation
+operator|.
+name|PrePersist
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|annotation
+operator|.
+name|PreRemove
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|annotation
+operator|.
+name|PreUpdate
 import|;
 end_import
 
@@ -310,6 +448,140 @@ operator|new
 name|AtomicLong
 argument_list|()
 decl_stmt|;
+specifier|protected
+specifier|static
+specifier|final
+name|Map
+argument_list|<
+name|LifecycleEvent
+argument_list|,
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|Annotation
+argument_list|>
+argument_list|>
+name|LIFECYCLE_EVENT_MAP
+decl_stmt|;
+static|static
+block|{
+name|LIFECYCLE_EVENT_MAP
+operator|=
+operator|new
+name|EnumMap
+argument_list|<>
+argument_list|(
+name|LifecycleEvent
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|LIFECYCLE_EVENT_MAP
+operator|.
+name|put
+argument_list|(
+name|LifecycleEvent
+operator|.
+name|POST_ADD
+argument_list|,
+name|PostAdd
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|LIFECYCLE_EVENT_MAP
+operator|.
+name|put
+argument_list|(
+name|LifecycleEvent
+operator|.
+name|PRE_PERSIST
+argument_list|,
+name|PrePersist
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|LIFECYCLE_EVENT_MAP
+operator|.
+name|put
+argument_list|(
+name|LifecycleEvent
+operator|.
+name|POST_PERSIST
+argument_list|,
+name|PostPersist
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|LIFECYCLE_EVENT_MAP
+operator|.
+name|put
+argument_list|(
+name|LifecycleEvent
+operator|.
+name|PRE_UPDATE
+argument_list|,
+name|PreUpdate
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|LIFECYCLE_EVENT_MAP
+operator|.
+name|put
+argument_list|(
+name|LifecycleEvent
+operator|.
+name|POST_UPDATE
+argument_list|,
+name|PostUpdate
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|LIFECYCLE_EVENT_MAP
+operator|.
+name|put
+argument_list|(
+name|LifecycleEvent
+operator|.
+name|PRE_REMOVE
+argument_list|,
+name|PreRemove
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|LIFECYCLE_EVENT_MAP
+operator|.
+name|put
+argument_list|(
+name|LifecycleEvent
+operator|.
+name|POST_REMOVE
+argument_list|,
+name|PostRemove
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|LIFECYCLE_EVENT_MAP
+operator|.
+name|put
+argument_list|(
+name|LifecycleEvent
+operator|.
+name|POST_LOAD
+argument_list|,
+name|PostLoad
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+block|}
 specifier|protected
 name|Collection
 argument_list|<
@@ -601,17 +873,7 @@ operator|.
 name|getJavaClass
 argument_list|()
 decl_stmt|;
-name|Map
-argument_list|<
-name|Class
-argument_list|,
-name|LifecycleEvent
-argument_list|>
-name|annotationsMap
-init|=
-name|createAnnotationsMap
-argument_list|()
-decl_stmt|;
+comment|// load annotated methods
 for|for
 control|(
 name|Method
@@ -623,64 +885,34 @@ name|getDeclaredMethods
 argument_list|()
 control|)
 block|{
-name|Annotation
-index|[]
-name|annotations
-init|=
-name|m
+name|LIFECYCLE_EVENT_MAP
 operator|.
-name|getAnnotations
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|annotations
-operator|.
-name|length
-condition|;
-name|i
-operator|++
-control|)
+name|forEach
+argument_list|(
+parameter_list|(
+name|eventType
+parameter_list|,
+name|annotationType
+parameter_list|)
+lambda|->
 block|{
 if|if
 condition|(
-name|annotationsMap
+name|m
 operator|.
-name|containsKey
+name|getDeclaredAnnotation
 argument_list|(
-name|annotations
-index|[
-name|i
-index|]
-operator|.
 name|annotationType
-argument_list|()
 argument_list|)
+operator|!=
+literal|null
 condition|)
 block|{
 name|callbackRegistry
 operator|.
 name|addCallback
 argument_list|(
-name|annotationsMap
-operator|.
-name|get
-argument_list|(
-name|annotations
-index|[
-name|i
-index|]
-operator|.
-name|annotationType
-argument_list|()
-argument_list|)
+name|eventType
 argument_list|,
 name|entityClass
 argument_list|,
@@ -692,7 +924,10 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+argument_list|)
+expr_stmt|;
 block|}
+comment|// load callback defined in the model
 name|CallbackDescriptor
 index|[]
 name|callbacks
@@ -2141,137 +2376,6 @@ name|valueComparisonStrategyFactory
 operator|=
 name|valueComparisonStrategyFactory
 expr_stmt|;
-block|}
-specifier|private
-name|Map
-argument_list|<
-name|Class
-argument_list|,
-name|LifecycleEvent
-argument_list|>
-name|createAnnotationsMap
-parameter_list|()
-block|{
-name|Map
-argument_list|<
-name|Class
-argument_list|,
-name|LifecycleEvent
-argument_list|>
-name|annotationsMap
-init|=
-operator|new
-name|HashMap
-argument_list|<>
-argument_list|()
-decl_stmt|;
-name|annotationsMap
-operator|.
-name|put
-argument_list|(
-name|PostAdd
-operator|.
-name|class
-argument_list|,
-name|LifecycleEvent
-operator|.
-name|POST_ADD
-argument_list|)
-expr_stmt|;
-name|annotationsMap
-operator|.
-name|put
-argument_list|(
-name|PrePersist
-operator|.
-name|class
-argument_list|,
-name|LifecycleEvent
-operator|.
-name|PRE_PERSIST
-argument_list|)
-expr_stmt|;
-name|annotationsMap
-operator|.
-name|put
-argument_list|(
-name|PostPersist
-operator|.
-name|class
-argument_list|,
-name|LifecycleEvent
-operator|.
-name|POST_PERSIST
-argument_list|)
-expr_stmt|;
-name|annotationsMap
-operator|.
-name|put
-argument_list|(
-name|PreUpdate
-operator|.
-name|class
-argument_list|,
-name|LifecycleEvent
-operator|.
-name|PRE_UPDATE
-argument_list|)
-expr_stmt|;
-name|annotationsMap
-operator|.
-name|put
-argument_list|(
-name|PostUpdate
-operator|.
-name|class
-argument_list|,
-name|LifecycleEvent
-operator|.
-name|POST_UPDATE
-argument_list|)
-expr_stmt|;
-name|annotationsMap
-operator|.
-name|put
-argument_list|(
-name|PreRemove
-operator|.
-name|class
-argument_list|,
-name|LifecycleEvent
-operator|.
-name|PRE_REMOVE
-argument_list|)
-expr_stmt|;
-name|annotationsMap
-operator|.
-name|put
-argument_list|(
-name|PostRemove
-operator|.
-name|class
-argument_list|,
-name|LifecycleEvent
-operator|.
-name|POST_REMOVE
-argument_list|)
-expr_stmt|;
-name|annotationsMap
-operator|.
-name|put
-argument_list|(
-name|PostLoad
-operator|.
-name|class
-argument_list|,
-name|LifecycleEvent
-operator|.
-name|POST_LOAD
-argument_list|)
-expr_stmt|;
-return|return
-name|annotationsMap
-return|;
 block|}
 block|}
 end_class
